--- a/src/Pages/HTML/index.html
+++ b/src/Pages/HTML/index.html
@@ -4,8 +4,119 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="preload" href="../../Media/Fonts/Orbitron/Orbitron-VariableFont_wght.ttf" as="font" type="font/woff2" crossorigin="anonymous"> -->
 </head>
 <body>
+    <h1 id="battleship-heading">BATTLESHIP</h1>
+
+    <dialog id="select-ships-dialog">
+
+        <div class="game-board">
+
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+            <div class="game-space"></div>
+
+
+        </div>
     
+    </dialog>
 </body>
 </html>
