Added the logic for the AI ship to fire back - needing to add some hover animation to show which areas you can and can't shoot, also there seems to be an error whereby one of the ai shots missed when it should have displayed a hit

--- a/src/Pages/HTML/index.html
+++ b/src/Pages/HTML/index.html
@@ -427,6 +427,16 @@
         <div style="display: none;" id="cursor-overlay"></div>
     </dialog>
 
+    <dialog id="end-game-dialog">
+        <div id="end-game-container">
+            <h1 data-decision="winner">Victory</h1>
+    
+    
+            <p id="winning-decision-desc">Congratulations, you have beaten the computer!!!</p>
+            <button id="game-reset" type="reset">Reset Game</button>
+
+        </div>
+    </dialog>
 
 
 </body>
