Adding in the aside commands to post messages on the state of the game

--- a/src/Pages/HTML/index.html
+++ b/src/Pages/HTML/index.html
@@ -235,6 +235,23 @@
 
     <aside>
 
+        <!-- <div class="info-container user-info">
+            <p class="command-player" data-animate-entry="fully-visible">
+                User:
+            </p>
+            <p class="command-desc" data-animate-entry="invisible">
+                Please select one of your oponents grid spaces to shoot...
+            </p>
+        </div>
+        <div class="info-container computer-info">
+            <p class="command-player">
+                Computer:
+            </p>
+            <p class="command-desc" data-animate-entry="visible">
+                Please select one of your oponents grid spaces to shoot...
+            </p>
+        </div> -->
+
     </aside>
 
     <dialog id="select-ships-dialog">
